# networks_programming_practice1

./: .gitignore  CMakeLists.txt  client.c  main.c  server.c  slist.c  slist.h  tp1opt.c  tp1opt.h
lib/: slist.c  slist.h  srvutils.c  srvutils.h  tp1opt.c  tp1opt.h
